@@ -18,6 +18,8 @@ CHANGES FROM 3.0 to X.X
 
 * Add reverse sorting in tree, client and buffer modes.
 
+* When a blank title is set (via \033k\033\\) re-enable automatic-rename.
+
 CHANGES FROM 2.9 to 3.0
 
 * xterm 348 now disables margins when resized, so send DECLRMM again after
